# allaboutdjango

./: .gitignore  Makefile  README.md  pyproject.toml
allaboutdjango/: manage.py  sample.env
allaboutdjango/allaboutdjango/: asgi.py  settings.py  urls.py  wsgi.py
allaboutdjango/core/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
allaboutdjango/core/middleware/: traffic.py
allaboutdjango/core/migrations/: 0001_initial.py  0002_sitevisit.py  0003_devlog_tags.py  0004_book.py
fe/: .env.sample  package-lock.json  package.json
fe/app/: layout.js
fe/app/(root)/: layout.js  page.js
fe/app/components/: Books.jsx  DevLogs.jsx  Footer.jsx  Header.jsx  Visitor.jsx  Weather.jsx
fe/src/routes/: +page.svelte  Content.svelte  Footer.svelte  Header.svelte
