[project]
name = "allaboutdjango"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.*",
    "django-filter>=25.1",
    "django-ipware>=7.0.1",
    "django-stubs==5.2.*",
    "django-taggit>=6.1.0",
    "djangorestframework>=3.16.0",
    "environs[django]>=14.2.0",
    "markdown>=3.8.2",
    "requests>=2.32.4",
]
