[project]
name = "allaboutdjango"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "country-converter>=1.3.1",
    "django==5.2.*",
    "django-filter>=25.1",
    "django-ipware>=7.0.1",
    "django-stubs==5.2.*",
    "django-taggit>=6.1.0",
    "djangorestframework>=3.16.0",
    "environs[django]>=14.2.0",
    "geoip2>=5.1.0",
    "markdown>=3.8.2",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
]
